planka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka
  namespace: default
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: plan.$DOMAIN_NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: planka
                port:
                  number: 1337
  tls:
    - secretName: tls-certificate
      hosts:
        - plan.$DOMAIN_NAME
